// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Button matches screenshot 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="c-jSUOIM c-jSUOIM-jsOpSy-color-primary c-jSUOIM-gWJSuX-size-md c-jSUOIM-bDGmTT-disabled-false c-jSUOIM-dSKgWl-cv"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all colors 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="c-jSUOIM c-jSUOIM-jsOpSy-color-primary c-jSUOIM-gWJSuX-size-md c-jSUOIM-bDGmTT-disabled-false c-jSUOIM-dSKgWl-cv"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-jSUOIM c-jSUOIM-bmmCCE-color-secondary c-jSUOIM-gWJSuX-size-md c-jSUOIM-bDGmTT-disabled-false c-jSUOIM-chBTEJ-cv"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-jSUOIM c-jSUOIM-UIZmM-color-success c-jSUOIM-gWJSuX-size-md c-jSUOIM-bDGmTT-disabled-false c-jSUOIM-fMjTrh-cv"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-jSUOIM c-jSUOIM-eNqAek-color-warning c-jSUOIM-gWJSuX-size-md c-jSUOIM-bDGmTT-disabled-false c-jSUOIM-dKsfPN-cv"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-jSUOIM c-jSUOIM-dodmCG-color-error c-jSUOIM-gWJSuX-size-md c-jSUOIM-bDGmTT-disabled-false c-jSUOIM-gURxYt-cv"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all sizes 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="c-jSUOIM c-jSUOIM-jsOpSy-color-primary c-jSUOIM-dPmqWS-size-sm c-jSUOIM-bDGmTT-disabled-false c-jSUOIM-dSKgWl-cv"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-jSUOIM c-jSUOIM-jsOpSy-color-primary c-jSUOIM-gWJSuX-size-md c-jSUOIM-bDGmTT-disabled-false c-jSUOIM-dSKgWl-cv"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-jSUOIM c-jSUOIM-jsOpSy-color-primary c-jSUOIM-STxME-size-lg c-jSUOIM-bDGmTT-disabled-false c-jSUOIM-dSKgWl-cv"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all variants 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="c-jSUOIM c-jSUOIM-jsOpSy-color-primary c-jSUOIM-gWJSuX-size-md c-jSUOIM-bDGmTT-disabled-false c-jSUOIM-dSKgWl-cv"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-jSUOIM c-jSUOIM-jsOpSy-color-primary c-jSUOIM-gWJSuX-size-md c-jSUOIM-bDGmTT-disabled-false c-jSUOIM-bRdhPS-cv"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-jSUOIM c-jSUOIM-jsOpSy-color-primary c-jSUOIM-gWJSuX-size-md c-jSUOIM-bDGmTT-disabled-false c-jSUOIM-cyBLNz-cv"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;
